--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,3 +1,10 @@
+<Files "*.php">
+	Require ip 127.0.0.1
+</Files>
+<Files "index.php">
+    Require all granted
+</Files>
+
 RewriteEngine On
 RewriteBase /video/api
 RewriteCond %{REQUEST_FILENAME} !-d
